fix(navigation): don’t stretch logo link on mobile (#295)

--- a/components/navigation/mobile.css
+++ b/components/navigation/mobile.css
@@ -7,7 +7,11 @@
 
   .navigation {
     display: grid;
+
     grid-template-columns: 1fr min-content;
+
+    justify-items: start;
+
     height: var(--top-nav-height);
 
     &[data-open="true"] {
